--- a/webdev/flix/fly.toml
+++ b/webdev/flix/fly.toml
@@ -6,8 +6,8 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
-[build]
-  builder = "heroku/buildpacks:20"
+# [build]
+#   builder = "heroku/buildpacks:20"
 
 [build.args]
   BUNDLE_WITHOUT = "development:test"
