--- a/webdev/flix/Gemfile
+++ b/webdev/flix/Gemfile
@@ -12,6 +12,8 @@ end
 group :production do
   gem 'pg'
 end
+gem 'mini_racer', platforms: :ruby
+
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Use SCSS for stylesheets
