--- a/webdev/flix/fly.toml
+++ b/webdev/flix/fly.toml
@@ -1,19 +1,12 @@
-# fly.toml file generated for wdi-json-flix on 2022-02-22T15:32:03+01:00
+# fly.toml file generated for flix on 2022-02-23T20:34:29+01:00
 
-app = "wdi-json-flix"
+app = "flix"
 
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
-# [build]
-#   builder = "heroku/buildpacks:20"
-
-[build.args]
-  BUNDLE_WITHOUT = "development:test"
-
 [env]
-  PORT = "8080"
 
 [experimental]
   allowed_public_ports = []
@@ -40,7 +33,7 @@ processes = []
     port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
+    grace_period = "10s"
     interval = "15s"
     restart_limit = 0
-    timeout = "2s"
+    timeout = "20s"
