--- a/webdev/React/TraversyMedia/support-desk/package.json
+++ b/webdev/React/TraversyMedia/support-desk/package.json
@@ -7,7 +7,7 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Wouter Dijks",
   "license": "MIT",
@@ -22,6 +22,7 @@
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "nodemon": "^3.0.1"
   }
 }
