--- a/webdev/React/TraversyMedia/support-desk/package.json
+++ b/webdev/React/TraversyMedia/support-desk/package.json
@@ -12,6 +12,7 @@
   "author": "Wouter Dijks",
   "license": "MIT",
   "dependencies": {
+    "@cucumber/cucumber": "^9.3.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^8.2.0",
