--- a/webdev/React/TraversyMedia/support-desk/package.json
+++ b/webdev/React/TraversyMedia/support-desk/package.json
@@ -7,7 +7,8 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "cucumber-js"
   },
   "author": "Wouter Dijks",
   "license": "MIT",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "^9.3.0",
     "@playwright/test": "^1.36.2",
+    "hamjest": "^4.0.1",
     "nodemon": "^3.0.1"
   }
 }
